030-software/fluxcd/apps/whoogle/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoogle
  annotations:
    configmap.reloader.stakater.com/reload: "css"
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: whoogle
  template:
    metadata:
      labels:
        app: whoogle
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: whoogle
          image: benbusby/whoogle-search:1.2.4@sha256:6ae072238642b7e5860c8fa7f68cf06be797eb4e2278fc41d17d3b5e8a051eea
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              memory: 2048Mi
          volumeMounts:
            - name: css
              mountPath: /whoogle/app/static/build
          #   - name: scripts
          #     mountPath: /whoogle/misc/tor/start-tor.sh
          #     subPath: start-tor.sh

      volumes:
        - name: css
          emptyDir: {}
        # - name: scripts
        #   configMap:
        #     name: scripts
        #     defaultMode: 0755
