030-software/fluxcd/apps/whoogle/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoogle
  annotations:
    dashboard.${domain}/name: whoogle
    dashboard.${domain}/url: https://whoogle.${domain}
    dashboard.${domain}/icon: cloud-search
spec:
  hostnames:
  - whoogle.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: whoogle
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
